update orange palette, loading button

--- a/src/app/drafts/opponent-overview/opponent-overview.component.scss
+++ b/src/app/drafts/opponent-overview/opponent-overview.component.scss
@@ -43,7 +43,7 @@ h3,
 h4 {
   font-family: var(--pdz-font-fancy);
   @media (max-width: 768px) {
-    font-size: var(--pdz-font-size-sm);
+    font-size: var(--pdz-font-size-sm) !important;
   }
 }
 
