--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -91,7 +91,7 @@
             </div>
           </div>
         } @empty {
-          <div class="flex w-full justify-center opacity-60 text-lg">
+          <div class="no-matchups">
             Click the [+] to add your first opponent!
           </div>
         }
