--- a/src/app/drafts/opponent-overview/opponent-score/new-score/opponent-score.component.html
+++ b/src/app/drafts/opponent-overview/opponent-score/new-score/opponent-score.component.html
@@ -86,87 +86,217 @@
             <div>Deaths: {{ statCount(aTeamArray, ["fainted"]) }}</div>
           </div>
 
-          <div class="flex">
+          <div class="team__bench">
             @for (p of aTeamArray.controls; track $index) {
-              @if (!p.controls.brought.value) {
-                <pdz-sprite
-                  (click)="toggleBrought(p)"
-                  size="3rem"
-                  [pokemon]="p.value.pokemon!"
-                  [class.not-brought]="!p.value.brought"
-                ></pdz-sprite>
-              }
+              <pdz-sprite
+                (click)="toggleBrought(p)"
+                size="3rem"
+                [pokemon]="p.value.pokemon!"
+                [class.not-brought]="!p.value.brought"
+              ></pdz-sprite>
             }
           </div>
           <div formArrayName="team" class="team__list">
             @for (p of aTeamArray.controls; track $index) {
               @if (p.controls.brought.value) {
-                <div [formGroupName]="$index" class="mon">
-                  <pdz-sprite
-                    size="1rem"
-                    (click)="toggleBrought(p)"
-                    [pokemon]="p.value.pokemon!"
-                    [class.not-brought]="!p.value.brought"
-                  ></pdz-sprite>
-                  <div class="mon__fields">
-                    <input type="number" formControlName="kills" min="0" />
-                    <input type="number" formControlName="indirect" min="0" />
-                    <label class="fainted-toggle">
-                      <input type="checkbox" formControlName="fainted" />
-                      Fainted
-                    </label>
+                <div class="pokemon-score-form">
+                  <div class="pokemon-score-header">
+                    <div>{{ p.controls.pokemon.value.name }}</div>
+                    <div>
+                      <button class="faint-btn">
+                        <mat-icon>skull</mat-icon>
+                      </button>
+                      <button class="faint-btn" (click)="toggleBrought(p)">
+                        <mat-icon>clear</mat-icon>
+                      </button>
+                    </div>
+                  </div>
+                  <div class="pokemon-score-body">
+                    <div class="sprite-wrapper">
+                      <pdz-sprite
+                        flipped
+                        [pokemon]="p.controls.pokemon.value"
+                      ></pdz-sprite>
+                    </div>
+                    <div class="forms">
+                      <div class="kills">
+                        <div class="kills-header">
+                          <div class="kill-label">Kills</div>
+                          <div class="total-kills">
+                            {{
+                              p.controls.kills.value + p.controls.indirect.value
+                            }}
+                          </div>
+                        </div>
+                        <div class="kills-body">
+                          <div class="kills-container">
+                            <div class="type-container">
+                              <div class="kill-value">
+                                {{ p.controls.kills.value }}
+                              </div>
+                              <div class="kill-type">Direct</div>
+                              <div class="counter-container">
+                                <button
+                                  class="add-counter"
+                                  (click)="incrementControl(p.controls.kills)"
+                                >
+                                  <mat-icon> add</mat-icon>
+                                </button>
+                                <button
+                                  class="sub-counter"
+                                  (click)="decrementControl(p.controls.kills)"
+                                  [disabled]="!p.controls.kills.value"
+                                >
+                                  <mat-icon>remove</mat-icon>
+                                </button>
+                              </div>
+                            </div>
+                            <div class="type-container">
+                              <div class="kill-value">
+                                {{ p.controls.indirect.value }}
+                              </div>
+                              <div class="kill-type">Indirect</div>
+                              <div class="counter-container">
+                                <button
+                                  class="add-counter"
+                                  (click)="
+                                    incrementControl(p.controls.indirect)
+                                  "
+                                >
+                                  <mat-icon> add</mat-icon>
+                                </button>
+                                <button
+                                  class="sub-counter"
+                                  (click)="
+                                    decrementControl(p.controls.indirect)
+                                  "
+                                  [disabled]="!p.controls.indirect.value"
+                                >
+                                  <mat-icon>remove</mat-icon>
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               }
             }
           </div>
         </div>
-
-        <div class="team" formGroupName="bTeam">
+        <div class="team alternate" formGroupName="bTeam">
           <div class="team__header">
+            <h2>{{ matchup.bTeam.teamName }}</h2>
             <button
               type="button"
-              (click)="changeWinner('b')"
-              [class.selected]="selectedMatchForm.controls.winner.value === 'b'"
+              (click)="changeWinner('a')"
+              [class.selected]="selectedMatchForm.controls.winner.value === 'a'"
             >
               Winner
             </button>
-            <h2>{{ matchup.bTeam.teamName }}</h2>
           </div>
           <div class="team__stats">
             <div>Brought: {{ statCount(bTeamArray, ["brought"]) }}</div>
             <div>Kills: {{ statCount(bTeamArray, ["kills", "indirect"]) }}</div>
             <div>Deaths: {{ statCount(bTeamArray, ["fainted"]) }}</div>
           </div>
-          <div class="flex">
+
+          <div class="team__bench">
             @for (p of bTeamArray.controls; track $index) {
-              @if (!p.controls.brought.value) {
-                <pdz-sprite
-                  (click)="toggleBrought(p)"
-                  size="3rem"
-                  [pokemon]="p.value.pokemon!"
-                  [class.not-brought]="!p.value.brought"
-                ></pdz-sprite>
-              }
+              <pdz-sprite
+                (click)="toggleBrought(p)"
+                size="3rem"
+                [pokemon]="p.value.pokemon!"
+                [class.not-brought]="!p.value.brought"
+              ></pdz-sprite>
             }
           </div>
           <div formArrayName="team" class="team__list">
             @for (p of bTeamArray.controls; track $index) {
               @if (p.controls.brought.value) {
-                <div [formGroupName]="$index" class="mon">
-                  <pdz-sprite
-                    size="1rem"
-                    (click)="toggleBrought(p)"
-                    [pokemon]="p.value.pokemon!"
-                    [class.not-brought]="!p.value.brought"
-                  ></pdz-sprite>
-                  <div class="mon__fields">
-                    <input type="number" formControlName="kills" min="0" />
-                    <input type="number" formControlName="indirect" min="0" />
-                    <label class="fainted-toggle">
-                      <input type="checkbox" formControlName="fainted" />
-                      Fainted
-                    </label>
+                <div class="pokemon-score-form">
+                  <div class="pokemon-score-header">
+                    <div>{{ p.controls.pokemon.value.name }}</div>
+                    <div>
+                      <button class="faint-btn">
+                        <mat-icon>skull</mat-icon>
+                      </button>
+                      <button class="faint-btn" (click)="toggleBrought(p)">
+                        <mat-icon>clear</mat-icon>
+                      </button>
+                    </div>
+                  </div>
+                  <div class="pokemon-score-body">
+                    <div class="sprite-wrapper">
+                      <pdz-sprite
+                        flipped
+                        [pokemon]="p.controls.pokemon.value"
+                      ></pdz-sprite>
+                    </div>
+                    <div class="forms">
+                      <div class="kills">
+                        <div class="kills-header">
+                          <div class="kill-label">Kills</div>
+                          <div class="total-kills">
+                            {{
+                              p.controls.kills.value + p.controls.indirect.value
+                            }}
+                          </div>
+                        </div>
+                        <div class="kills-body">
+                          <div class="kills-container">
+                            <div class="type-container">
+                              <div class="kill-value">
+                                {{ p.controls.kills.value }}
+                              </div>
+                              <div class="kill-type">Direct</div>
+                              <div class="counter-container">
+                                <button
+                                  class="add-counter"
+                                  (click)="incrementControl(p.controls.kills)"
+                                >
+                                  <mat-icon> add</mat-icon>
+                                </button>
+                                <button
+                                  class="sub-counter"
+                                  (click)="decrementControl(p.controls.kills)"
+                                  [disabled]="!p.controls.kills.value"
+                                >
+                                  <mat-icon>remove</mat-icon>
+                                </button>
+                              </div>
+                            </div>
+                            <div class="type-container">
+                              <div class="kill-value">
+                                {{ p.controls.indirect.value }}
+                              </div>
+                              <div class="kill-type">Indirect</div>
+                              <div class="counter-container">
+                                <button
+                                  class="add-counter"
+                                  (click)="
+                                    incrementControl(p.controls.indirect)
+                                  "
+                                >
+                                  <mat-icon> add</mat-icon>
+                                </button>
+                                <button
+                                  class="sub-counter"
+                                  (click)="
+                                    decrementControl(p.controls.indirect)
+                                  "
+                                  [disabled]="!p.controls.indirect.value"
+                                >
+                                  <mat-icon>remove</mat-icon>
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               }
