--- a/src/styles/base/_tokens.scss
+++ b/src/styles/base/_tokens.scss
@@ -88,25 +88,25 @@ $core-tokens: (
   "cyan-950": #01313f,
 
   // Orange
-  "orange-50": #fff7e6,
-  "orange-100": #ffeacc,
-  "orange-150": #ffddb3,
-  "orange-200": #ffd199,
-  "orange-250": #ffc480,
-  "orange-300": #ffb96e,
-  "orange-350": #ffbe78,
-  "orange-400": #ffb366,
-  "orange-450": #fca34d,
-  "orange-500": #fb923c,
-  "orange-550": #f97316,
-  "orange-600": #ea580c,
-  "orange-650": #d9510b,
-  "orange-700": #c2410c,
-  "orange-750": #b43407,
-  "orange-800": #9a2c0c,
-  "orange-850": #7f280a,
-  "orange-900": #652008,
-  "orange-950": #4d1b00,
+  "orange-50": #fef9f4,
+  "orange-100": #fcece1,
+  "orange-150": #f9e0ce,
+  "orange-200": #f6d0b3,
+  "orange-250": #f3c098,
+  "orange-300": #f0ae7d,
+  "orange-350": #ed9d61,
+  "orange-400": #e98a44,
+  "orange-450": #e27931,
+  "orange-500": #da661e,
+  "orange-550": #c15a1a,
+  "orange-600": #a94f17,
+  "orange-650": #924515,
+  "orange-700": #7a3b12,
+  "orange-750": #62310f,
+  "orange-800": #4b270c,
+  "orange-850": #331d09,
+  "orange-900": #1b1306,
+  "orange-950": #040903,
 
   // Error (Red)
   "red-50": #ffebee,
