--- a/src/app/drafts/matchup-overview/matchup/typechart/typechart.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/typechart/typechart.component.scss
@@ -1,7 +1,10 @@
 @use "../../../../../styles/global.scss" as *;
 .widget-container {
-  --pdz-cmp-typechart-stat-hover: var(--pdz-color-primary);
+  --pdz-cmp-typechart-stat-hover: var(--pdz-color-primary-container);
+  --pdz-cmp-typechart-border-hover: var(--pdz-color-primary-border);
+
   &.alternate {
-    --pdz-cmp-typechart-stat-hover: var(--pdz-color-secondary);
+    --pdz-cmp-typechart-stat-hover: var(--pdz-color-secondary-container);
+    --pdz-cmp-typechart-border-hover: var(--pdz-color-secondary-border);
   }
 }
