--- a/src/app/images/loading/loading.component.scss
+++ b/src/app/images/loading/loading.component.scss
@@ -22,13 +22,27 @@
       }
     }
 
-    @keyframes wave-r {
+    @keyframes wave-r-secondary {
       0%,
+      50%,
       100% {
-        r: 2.4;
+        r: 2;
       }
-      50% {
-        r: 3.6;
+      25%,
+      75% {
+        r: 3;
+      }
+    }
+
+    @keyframes wave-r-primary {
+      0%,
+      50%,
+      100% {
+        r: 3;
+      }
+      25%,
+      75% {
+        r: 2;
       }
     }
 
@@ -60,7 +74,7 @@
     .circle-primary {
       animation:
         wave-cy 2s infinite,
-        wave-r 2s infinite,
+        wave-r-primary 2s infinite,
         wave-fill-primary 2s infinite;
       animation-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
     }
@@ -68,7 +82,7 @@
     .circle-secondary {
       animation:
         wave-cy 2s infinite,
-        wave-r 2s infinite,
+        wave-r-secondary 2s infinite,
         wave-fill-secondary 2s infinite;
       animation-timing-function: cubic-bezier(0.5, 0, 0.5, 1);
     }
